把按鈕調成固定長寬

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p>地圖</p>
         </a>
         <!-- 製造空a 空出位置 -->
-        <a href="#" class="blank"><p>我要通報</p></a>
+        <a href="#" class="blank" style="color:black ;"><p>我要通報</p></a>
 
         <!-- 中央按鈕 -->
         <a href="#"  class="report">
